# dayjot

./: .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  tsconfig.base.json
.codex/: hooks.json
.codex/environments/: environment.toml
.github/release-please/: config.beta.json  config.stable.json  manifest.beta.json
.github/workflows/: ci.yml  pr-title.yml  release-please.yml  release.yml  testflight.yml
apps/cli/: Cargo.toml
apps/cli/src/: error.rs  frontmatter.rs  graph.rs  hash.rs  index.rs  keys.rs  lib.rs  main.rs  note_file.rs  paths.rs  resolve.rs  search.rs
apps/cli/src/commands/: mod.rs  open.rs  output.rs  path.rs  search.rs  show.rs  today.rs
apps/cli/tests/: cli.rs  parity.rs
apps/desktop/: CHANGELOG.beta.md  CHANGELOG.md  apps  eslint.config.js  excalidraw-fonts-plugin.ts  index.html  package.json  react-compiler-plugin.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.dev.plist  Entitlements.plist  Info.plist  ios.project.yml  tauri.beta.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json  tauri.ios.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/icons-beta/: icon.icns
apps/desktop/src-tauri/icons-dev/: icon.icns
apps/desktop/src-tauri/migrations/: 0005_note_list_projection.sql
apps/desktop/src-tauri/skills/: graph-skill.md
apps/desktop/src-tauri/src/: background_task.rs  calendar.rs  capture.rs  contacts.rs  devtools.rs  embed_mobile.rs  error.rs  fs.rs  graph_gitignore.rs  lib.rs  main.rs  quit.rs  recents.rs  secrets.rs  settings.rs  skill.rs  spike_mobile.rs  watcher.rs  watcher_mobile.rs  windows.rs
apps/desktop/src-tauri/src/conflict/: archive.rs  frontmatter.rs  shadow.rs
apps/desktop/src-tauri/src/db/: embed_write.rs  migrations.rs  mod.rs  tests.rs  write.rs
apps/desktop/src-tauri/src/fs/: asset_protocol.rs  assets.rs  import.rs  import_assets.rs  io.rs  mod.rs  resolve.rs
apps/desktop/src-tauri/src/git/: commit.rs  commit_message.rs  merge.rs  mod.rs  remote.rs  repo.rs  tests.rs
apps/desktop/src-tauri/src/icloud/: storage.rs  sweep.rs  watch.rs
apps/extension/: .gitignore  README.md  manifest-key.test.ts  package.json  tsconfig.json  wxt.config.ts
apps/native-host/: Cargo.toml
apps/native-host/src/: envelope.rs  lib.rs  main.rs  protocol.rs  spool.rs
crates/index-schema/: Cargo.toml
crates/index-schema/migrations/: 0001_initial.sql  0002_embeddings.sql  0003_cosine_vectors.sql  0004_pinned.sql  0005_note_list_projection.sql  0007_note_id_index.sql  0010_tag_search_indexes.sql  0011_tasks.sql  0012_task_due_date.sql  0013_perf_indexes.sql  0019_drop_ai_leftovers.sql
crates/index-schema/src/: lib.rs
design-system/: SKILL.md  _ds_bundle.js  _ds_manifest.json  package.json  readme.md  styles.css
design-system/guidelines/: brand-graph.html  brand-logo.html  spacing-scale.html  type-display.html  type-weights.html
design-system/tokens/: colors.css  fonts.css  spacing.css  typography.css
docs/: cli.md  dayjot-v2-grounding-brief.md  dayjot-v2-indexing-strategy.md  dayjot-v2-mobile-grounding-brief.md  dayjot-v2-product-vision.md  dayjot-v2-sync-strategy.md  deep-links.md  generic-git-remotes.md  icloud-sync.md  ios-testflight.md  macos-distribution.md  multi-window.md  privacy.md  product.md  readable-filenames.md  reflect-v1-all-notes.md  reflect-v1-backlink-menu.md  reflect-v1-overview.md  reflect-v2-grounding-brief.md  reflect-v2-indexing-strategy.md  reflect-v2-mobile-grounding-brief.md  reflect-v2-product-vision.md
docs/contributing/: adding-a-command.md  adding-a-setting.md  editor-architecture.md  mobile-simulator.md
docs/decisions/: 0001-raw-sql-writes-over-ipc.md  0002-index-bridge-followups.md  0003-mobile-shell.md  0004-all-notes-trash-and-tag-scope.md
docs/performance-pass/: benchmarks.md  final-report.md  plan.md  status.md
docs/plans/: 00-overview.md  01-foundation-and-toolchain.md  02-graph-and-file-storage.md  03-markdown-document-model.md  04-local-index-sqlite.md  05-markdown-editor.md  06-daily-notes-and-routing.md  07-backlinks.md  08-lexical-search-and-command-palette.md  09-semantic-search-and-embeddings.md  10-ai-copilot-sidebar.md  11-link-capture.md  12-backup-and-sync.md  13-import-export-portability.md  14-cli-read-discovery.md  15-hardening-packaging-release.md  16-generic-git-remotes.md  17-readable-filenames.md  18-tasks.md  19-mobile.md  libraries.md  (+5 more)
patches/: virtua.patch
plugins/tauri-plugin-keyboard/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-keyboard/ios/: Package.swift  README.md
plugins/tauri-plugin-keyboard/ios/Sources/: KeyboardPlugin.swift
plugins/tauri-plugin-keyboard/permissions/: default.toml
plugins/tauri-plugin-keyboard/permissions/autogenerated/: reference.md
plugins/tauri-plugin-keyboard/permissions/autogenerated/commands/: current_height.toml
plugins/tauri-plugin-keyboard/permissions/schemas/: schema.json
plugins/tauri-plugin-keyboard/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-recording/: Cargo.toml  build.rs
plugins/tauri-plugin-recording/ios/: Package.swift
plugins/tauri-plugin-recording/ios/Sources/: RecordingActivityAttributes.swift  RecordingPlugin.swift
plugins/tauri-plugin-recording/permissions/: default.toml
plugins/tauri-plugin-recording/permissions/autogenerated/: reference.md
plugins/tauri-plugin-recording/permissions/autogenerated/commands/: action_performed.toml  actions_ready.toml  cancel_recording.toml  delete_staged.toml  list_staged.toml  read_staged.toml  recording_status.toml
plugins/tauri-plugin-recording/permissions/schemas/: schema.json
plugins/tauri-plugin-recording/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+699 files in other folders)
