# Workspace for all Rust crates: the Tauri desktop shell, the `reflect` CLI,
# and the shared index-schema crate. One lockfile pins one SQLite everywhere —
# the desktop writer and the CLI reader can never skew.
[workspace]
resolver = "2"
members = ["apps/cli", "apps/desktop/src-tauri", "apps/native-host", "crates/index-schema"]

[workspace.dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
sqlite-vec = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27.0"
