# Workspace for all Rust crates: the Tauri desktop shell, the `reflect` CLI,
# the shared index-schema crate, and first-party mobile plugins. One lockfile
# pins one SQLite everywhere — the desktop writer and the CLI reader can
# never skew.
[workspace]
resolver = "2"
members = [
  "apps/cli",
  "apps/desktop/src-tauri",
  "apps/native-host",
  "crates/index-schema",
  "plugins/tauri-plugin-keyboard",
  "plugins/tauri-plugin-recording",
]

[workspace.dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
sqlite-vec = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
