[package]
name = "dayjot-cli"
version = "0.1.0"
description = "Read/discovery CLI over a DayJot graph (Plan 14)"
edition = "2021"

[[bin]]
name = "dayjot"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dayjot-index-schema = { path = "../../crates/index-schema", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.28"
sha2 = { workspace = true }
pulldown-cmark = "0.13.4"
saphyr = "0.0.6"

[dev-dependencies]
tempfile = { workspace = true }
dayjot-index-schema = { path = "../../crates/index-schema" }
