[package]
name = "reflect-capture-host"
version = "0.1.0"
description = "Chrome native-messaging host: spools link captures into the graph's capture inbox (Plan 11)"
edition = "2021"

[[bin]]
name = "reflect-capture-host"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22.1"
dirs = "6.0.0"
tempfile = { workspace = true }
