[package]
name = "tauri-plugin-keyboard"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keyboard"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0.228"
thiserror = "2.0.18"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
