[package]
name = "reflect-open"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reflect_open_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
reflect-index-schema = { path = "../../../crates/index-schema" }
tempfile = { workspace = true }
trash = "5.2.6"
dirs = "6.0.0"
tauri-plugin-dialog = "2.7.1"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
base64 = "0.22.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastembed = "5"
# Direct dependency on fastembed's own downloader, used to pre-fetch the
# embedding model with byte-level progress (fastembed downloads silently).
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "native-tls"] }
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
# Git backup/sync primitives (Plan 12) + SSH transport for generic remotes
# (Plan 16 V1: agent auth only). Everything is vendored/static — libssh2 and
# openssl must never link against homebrew dylibs the distributed app won't
# have (libssh2-sys only consults pkg-config when LIBSSH2_SYS_USE_PKG_CONFIG
# is set, and vendored-openssl pins the rest).
git2 = { version = "0.21", default-features = false, features = [
  "https",
  "ssh",
  "vendored-libgit2",
  "vendored-openssl",
] }
tauri-plugin-http = "2.5.9"
tauri-plugin-window-state = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

