[package]
name = "reflect-open"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reflect_open_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` compiles the web inspector into release builds too (it is otherwise
# debug-only), so a shipped app stays debuggable — see `src/devtools.rs`.
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# `hooks` adds the authorizer API used to lock the read-only `db_query` bridge
# down to pure reads (deny ATTACH/DETACH/PRAGMA); see `db/query.rs`.
rusqlite = { workspace = true, features = ["hooks"] }
reflect-index-schema = { path = "../../../crates/index-schema" }
tempfile = { workspace = true }
dirs = "6.0.0"
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
# Git backup/sync primitives (Plan 12) + SSH transport for generic remotes
# (Plan 16 V1: agent auth only). Everything is vendored/static — libssh2 and
# openssl must never link against homebrew dylibs the distributed app won't
# have (libssh2-sys only consults pkg-config when LIBSSH2_SYS_USE_PKG_CONFIG
# is set, and vendored-openssl pins the rest).
git2 = { version = "0.21", default-features = false, features = [
  "https",
  "ssh",
  "vendored-libgit2",
  "vendored-openssl",
] }
tauri-plugin-http = "2.5.9"
# Link capture (Plan 11): screenshot downscale + the bounded meta-scrape fetch.
# reqwest 0.12 rides the exact version tauri-plugin-http already compiles.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Desktop-only capabilities (Plan 19): auto-update (mobile updates go through
# the app stores), window-state (no windows to restore on mobile), the file
# watcher (nothing else writes the mobile sandbox; local writes notify
# in-process), the embedding runtime (fastembed/ORT is not built for mobile —
# semantic search is desktop-only in the first mobile wave), and OS-trash
# deletes (mobile moves into the graph-local `.reflect/trash/` instead).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
trash = "5.2.6"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
fastembed = "5"
# Direct dependency on fastembed's own downloader, used to pre-fetch the
# embedding model with byte-level progress (fastembed downloads silently).
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "native-tls"] }

# Mobile-only capabilities (Plan 19): the first-party keyboard bridge — no
# software keyboard on desktop. (Sharing uses the webview's Web Share API,
# `navigator.share`, so it needs no native plugin.)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-keyboard = { path = "../../../plugins/tauri-plugin-keyboard" }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

